testsuite/tests/checks/function_style_procedures/test.out
function_style_procedures.adb:4:4: error: procedure can be rewritten as function
4 |    procedure P (R : out Integer) is
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

function_style_procedures.ads:3:4: error: procedure can be rewritten as function
3 |    procedure P (R : out Integer); -- FLAG
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

